fix: WEB-626 overflowing tabbed content (#6202)
* Update fullwidth prop

* Add fullWidth prop to tabbedcontent

--- a/src/theme/Tabs/styles.module.scss
+++ b/src/theme/Tabs/styles.module.scss
@@ -1,5 +1,8 @@
 .tabList {
   margin-bottom: var(--ifm-leading);
+  &:has(.full-width) {
+    width: 100%;
+  }
 }
 
 .tabItem {
